# pengepul

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTEXT.md  Cargo.toml  Dockerfile  README.md  compose.yaml  example.txt  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: openclaw-anthropic-filter.md
docs/adr/: 0001-replace-the-providerid-enum-with-a-kind-id-struct.md  0002-rename-openclaw-tool-names-on-the-wire.md  0003-route-by-model-id-pattern.md  0004-strip-openclaw-bot-sections-by-heading-keyword.md  0005-rename-tool-refs-in-prose-and-narrow-the-section-strip.md  0006-cap-cache-control-breakpoints.md  0007-clients-adapt-no-per-client-routes.md  0008-swap-web-tools-for-anthropic-server-tools.md  0009-exact-heading-match-for-the-generated-heartbeats-section.md
docs/specs/: openclaw-anthropic-filter.md
docs/superpowers/plans/: 2026-06-01-cursor-provider-support.md  2026-06-04-phase-0-foundation.md
examples/: masq.rs
pengepul/: __init__.py  accounts.py  admin_client.py  app.py  callback.py  cli.py  config.py  oauth.py  pi_config.py  providers.py  proxy.py  service.py  streaming.py  tokens.py  translate.py  types.py  upstream.py  utils.py
src/: accounts.rs  app.rs  cli.rs  config.rs  cursor.rs  cursor_auth.rs  lib.rs  main.rs  masquerade.rs  oauth.rs  providers.rs  runtime.rs  service.rs  streaming.rs  tokens.rs  translate.rs  types.rs  upstream.rs  utils.rs
tests/: accounts.rs  app.rs  binary.rs  cli.rs  config_tokens_providers.rs  helpers.py  masquerade.rs  service.rs  streaming.rs  test_accounts.py  test_app.py  test_cli.py  test_config.py  test_core.py  test_oauth.py  test_pi_config.py  test_providers.py  test_service.py  test_streaming.py  test_tokens.py  test_translate.py  translate.rs  upstream.rs
tests/fixtures/: openclaw-embedded-body.json
(+2 files in other folders)
