[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pengepul"
version = "0.1.0"
description = "OAuth-to-API relay for Claude and Codex accounts"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "PyYAML>=6.0",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[project.scripts]
pengepul = "pengepul.cli:main"

[tool.setuptools.packages.find]
include = ["pengepul*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
